# Autobahn

./: .gitignore  .travis.yml  Autobahn.cabal  README.md  config.atb  index.html  package.yaml  runme  stack.yaml  style.css
bintree/: Main.hs  README  binarytrees.ghc-4.ghc_run  bintree.cabal  bintreeSurvivor.hs  gcmem.sh  gen.hs  gen2.hs  nohup.out  timing1.temp  timing2.temp
bintree/autobahn-results/: result.html
bintree/autobahn-results/1/: Main.hs
bintree/autobahn-results/2/: Main.hs
bintree/autobahn-results/3/: Main.hs
bintree/strictversions/: binarytrees.ghc-4.hs  gen.hs  genmem.hs  nobang.hs
gcSimulator/: .HarnessLanguage.hs.swp  DeepSeqInstances.hs  EtParser.hs  HarnessLanguage.hs  Machine.hs  MainTest.hs  NurseryGC.hs  ObjectModel.hs  Profiling.hs  ReachGC.hs  SmallIntSet.hs  TestMain.hs  WholeHeapGC.hs  WholeHeapMachine.hs  bangs  bangs.short.hs  batik.out  batik.trace.short.hs  bench2.sh  build.sh  config.atb  config.atb~  fop.trace.short.hs  gcGenSim.hs  gcSimulator.cabal  gcSimulator.hp  gcSimulator.hs  gcSimulator.ps  gcSimulator.tix  gcSimulatorSurvivor.hs  gcmem.sh  gcright.sh  gen.short.hs  gen2.hs  jython.trace.short.hs  lifeQuartie.hs  lifeQuartieTest3.txt  lifeTimeAnalyzer.hs  luindex.trace.short.hs  lusearch.trace.short.hs  (+17 more)
gcSimulator/.svn/: entries
gcSimulator/.svn/text-base/: EtParser.hs.svn-base  EtParserNoFields.hs.svn-base  GenerationalGC.hs.svn-base  Graph.hs.svn-base  Machine.hs.svn-base  ObjectToTypeMap.hs.svn-base  Simulate.hs.svn-base  WholeHeapMachine.hs.svn-base  build.sh.svn-base  deathAlyzer.hs.svn-base  gcGenSim.hs.svn-base  gcReachSim.hs.svn-base  gcSimulator.hs.svn-base  lifeQuartieTest.txt.svn-base  lifeQuartieTest2.txt.svn-base  plot_grs.gnuplot.svn-base  plot_grs.r.svn-base  pointerStabilityGraph.hs.svn-base  profile.sh.svn-base  stableFields.hs.svn-base  testNurseryCollect.hs.svn-base
gcSimulator/strict-logs/: README
gcSimulator/tests/: test1.trace
gcSimulator/tests/.svn/: entries
profiles/: index.html
profiles/opt-graphs/: anna.ps  ansi.ps  atom.ps  awards.ps  banner.ps  bernouilli.ps  binary-trees.ps  boyer2.ps  cacheprof.ps  calendar.ps  cichelli.ps  clausify.ps  cryptarithm1.ps  cryptarithm2.ps  cse.ps  eliza.ps  exp3_8.ps  fannkuch-redux.ps  fasta.ps  fem.ps  fish.ps  fluid.ps  fulsom.ps  gamteb.ps  gcd.ps  gen_regexps.ps  gg.ps  hidden.ps  infer.ps  integer.ps  integrate.ps  kahan.ps  lcss.ps  life.ps  maillist.ps  minimax.ps  multiplier.ps  n-body.ps  paraffins.ps  pic.ps  (+19 more)
profiles/reg-graphs/: anna.ps  ansi.ps  atom.ps  awards.ps  banner.ps  bernouilli.ps  binary-trees.ps  boyer2.ps  cacheprof.ps  calendar.ps  cichelli.ps  clausify.ps  cryptarithm1.ps  cryptarithm2.ps  cse.ps  eliza.ps  exp3_8.ps  fannkuch-redux.ps  fasta.ps  fem.ps  fish.ps  fluid.ps  fulsom.ps  gamteb.ps  gcd.ps  gen_regexps.ps  gg.ps  hidden.ps  infer.ps  integer.ps  integrate.ps  kahan.ps  lcss.ps  life.ps  maillist.ps  minimax.ps  multiplier.ps  n-body.ps  paraffins.ps  pic.ps  (+19 more)
sample/: result.html  style.css
src/: Config.hs  GeneAlg.hs  GeneAlg2.hs  Main.hs  Min.hs  Parse.hs  Profiling.hs  Profiling.hs.save  Result.hs  Result.hs~  Rewrite.hs  Types.hs  Utils.hs  note.md
test/: Test.hs  testme
test/hello/: .gitignore  config.atb  hello.cabal  hello.hs
test/spectral/atom/: .gitignore  atom.cabal  atom.hs  config.atb  makefile
