-- The name of the package.
name:                Autobahn

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:            

-- A longer description of the package.
-- description:         

-- The license under which the package is released.
-- license:             

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Yisu Remy Wang

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          remywang@protonmail.com

-- A copyright notice.
-- copyright:           

-- category:            

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
extra-source-files:  README.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10

--  
executable Autobahn
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs
  
  -- LANGUAGE extensions used by modules in this package.
  other-extensions:    BangPatterns, FlexibleInstances, MultiParamTypeClasses, TypeSynonymInstances
  
  -- Other library packages from which modules are imported.

  build-depends:       base >=4.7 && <4.8, random >=1.0 && <1.2, GA >=1.0 && <1.1, process >=1.2 && <1.3, bitwise >=0.1 && <0.2, text >=1.2 && <1.3, strict-io >=0.2 && <0.3, deepseq >=1.3 && <1.4, haskell-src-exts >=1.14 && <1.17, directory >=1.2 && <1.3, filepath >=1.3 && <1.4, bv, mtl, uniplate, criterion, parsec, html
  
  ghc-options: -O2 -rtsopts "-with-rtsopts=-T"
  -- Directories containing source files.
  hs-source-dirs: src/     
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  
